<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Light"

            >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/edtIrId"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_black"
                        android:textColor="@color/colorGreyText"
                        android:textColorHint="@color/colorGreyText"
                        android:textSize="@dimen/login_text_size"
                        android:hint="@string/IrId"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/edt_nomineename"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_black"
                        android:textColor="@color/colorGreyText"
                        android:textColorHint="@color/colorGreyText"
                        android:textSize="@dimen/login_text_size"
                        android:hint="@string/nomineename"
                        />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/edt_date"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_black"
                        android:textColor="@color/colorGreyText"
                        android:textColorHint="@color/colorGreyText"
                        android:textSize="@dimen/login_text_size"
                        android:hint="@string/date"
                        />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/edt_pan"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_black"
                        android:textColor="@color/colorGreyText"
                        android:textColorHint="@color/colorGreyText"
                        android:textSize="@dimen/login_text_size"
                        android:hint="@string/pannumber"
                        />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/edt_adhaar"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/border_black"
                        android:textColor="@color/colorGreyText"
                        android:textColorHint="@color/colorGreyText"
                        android:textSize="@dimen/login_text_size"
                        android:hint="@string/aadharnumber"
                        />


                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/border_black"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:spinnerMode="dropdown"
                        android:entries="@array/relation"
                        >


                    </Spinner>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:gravity="bottom"
                        >
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Save"
                            android:layout_weight="1"
                            android:textAllCaps="false"
                            />

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Cancel"
                            android:layout_weight="1"
                            android:textAllCaps="false"

                            />


                    </LinearLayout>

                </LinearLayout>




        </RelativeLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>